--- a/screen.css
+++ b/screen.css
@@ -20,3 +20,14 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
   Setting type with a 4:3 modular scale
   http://www.modularscale.com/?18&px&1.333
 */
+html {
+  font-size: 1.125em; /* 18 / 16 = 1.125 */
+  line-height: 1.222em; /* 22 / 18 = 1.2222222222 */
+}
+
+body {
+  padding-top: 3.667em;
+  padding-right: 1.222em;
+  padding-left: 1.222em;
+  background-color: green;
+}
