--- a/screen.css
+++ b/screen.css
@@ -29,5 +29,25 @@ body {
   padding-top: 3.667em;
   padding-right: 1.222em;
   padding-left: 1.222em;
-  background-color: green;
+  background-color: #88BBD6;
+}
+h1,
+h2,
+h3,
+h4,
+p {
+  padding-bottom: 1.222em; /* 22 / 18 = 1.2222222222 */
+}
+h1 {
+  font-size: 2.369em; /* 42.635 / 18 = 2.369 */
+  line-height: 1.032em; /* 44 / 42.635 = 1.032 */
+  padding-bottom: 0.516em; /* 22 / 42.635 = 0.516 */
+}
+h2 {
+  font-size: 1.777em; /* 31.984 / 18 = 1.777 */
+  line-height: 1.032em; /* 33 / 31.984 = 1.032 */
+  padding-bottom: 0.688em; /* 22 / 31.984 = 0.688 */
+}
+h3 {
+  font-weight: bold;
 }
