--- a/screen.css
+++ b/screen.css
@@ -26,9 +26,9 @@ html {
 }
 
 body {
-  padding-top: 3.667em;
-  padding-right: 1.222em;
-  padding-left: 1.222em;
+  padding-top: 3.667em; /* 66 / 18 = 3.667... */
+  padding-right: 1.222em; /* 22 / 18 = 1.2222222222 */
+  padding-left: 1.222em; /* 22 / 18 = 1.2222222222 */
   background-color: #88BBD6;
 }
 h1,
@@ -50,4 +50,16 @@ h2 {
 }
 h3 {
   font-weight: bold;
+}
+ul {
+  list-style-type: disc;
+}
+li ul {
+  padding-top: 0.611em; /* 11 / 18 = 0.6111111 */
+  padding-left: 1.222em; /* 22 / 18 = 1.2222222222 */
+  padding-bottom: 0;
+  list-style-type: circle;
+}
+li {
+  padding-bottom: 0.611em; /* 11 / 18 = 0.6111111 */
 }
