Move nav links to top left corner

--- a/screen.css
+++ b/screen.css
@@ -70,3 +70,10 @@ audio {
   display: block;
   max-width: 100%;
 }
+
+#navigation {
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
