add media at min-375 with padding right and left

--- a/screen.css
+++ b/screen.css
@@ -105,3 +105,20 @@ audio {
   list-style-type: none;
   padding-bottom: 0;
 }
+
+/* State Styles */
+/*
+  States of the browser and user access
+  conditions.
+  Hint: these tend to be:
+  1. Driven by media queries
+  2. Influenced by JavaScript
+  3. Organized by Base, Layout, Module, State
+*/
+
+@media screen and (min-width: 375px) {
+  body {
+    padding-right: 11.73333333%; /* 44 / 375 = 11.73333333% */
+    padding-left: 11.73333333%; /* 44 / 375 = 11.73333333% */
+  }
+}
