Add media screen at min-width 640px with increase in font size

--- a/screen.css
+++ b/screen.css
@@ -122,3 +122,8 @@ audio {
     padding-left: 11.73333333%; /* 44 / 375 = 11.73333333% */
   }
 }
+@media screen and (min-width: 640px) {
+  html {
+    font-size: 1.25em; /* 20 / 16 = 1.25em */
+  }
+}
