resize images in interests

--- a/screen.css
+++ b/screen.css
@@ -64,11 +64,11 @@ li {
   padding-bottom: 0.611em; /* 11 / 18 = 0.6111111 */
 }
 /* Responsive Media */
-img,
-video,
-audio {
+img {
   display: block;
-  max-width: 100%;
+  max-width: 80%;
+  padding-top: 0.611em; /* 11 / 18 = 0.6111111 */
+  padding-bottom: 0.611em; /* 11 / 18 = 0.6111111 */
 }
 
 #navigation {
