--- a/screen.css
+++ b/screen.css
@@ -102,6 +102,12 @@ figcaption {
   color: white;
   background-color: darkblue;
 }
+#home #nav-home a,
+#resume #nav-resume a,
+#interests #nav-interests a {
+  color: #000000;
+  background-color: #00CCFF;
+}
 /* Modular Styles */
 /*
   Repeating style patterns.
