add font style and weight to make h4 contact standout from others

--- a/screen.css
+++ b/screen.css
@@ -53,6 +53,8 @@ h3 {
 }
 h4 {
   border-bottom: 0.0625em solid #000000;
+  font-weight: bolder;
+  font-style: oblique;
 }
 .social {
   padding-top: 1.222em;
