--- a/screen.css
+++ b/screen.css
@@ -42,6 +42,10 @@ h1 {
   font-size: 2.369em; /* 42.635 / 18 = 2.369 */
   line-height: 1.032em; /* 44 / 42.635 = 1.032 */
   padding-bottom: 0.516em; /* 22 / 42.635 = 0.516 */
+  margin: 0;
+  font-family: georgia, cursive;
+  font-weight: lighter;
+  font-style: italic;
 }
 h2 {
   font-size: 1.777em; /* 31.984 / 18 = 1.777 */
