--- a/screen.css
+++ b/screen.css
@@ -35,6 +35,7 @@ body {
 h1,
 h2,
 h3,
+h5,
 p {
   padding-bottom: 1.222em; /* 22 / 18 = 1.2222222222 */
 }
@@ -135,6 +136,13 @@ figcaption {
 #interests #nav-interests a {
   color: #000000;
   background-color: #00CCFF;
+}
+form ol,
+form ol li {
+  list-style-type: none;
+}
+label[for='accept-terms'] {
+  display: inline;
 }
 /* State Styles */
 /*
