add media screen min width 1440px to resize the porch image

--- a/screen.css
+++ b/screen.css
@@ -228,3 +228,9 @@ label[for="accept-terms"] {
     width: 200%;
   }
 }
+@media screen and (min-width: 1440px) {
+  #porch {
+    flex: auto;
+    width: 20em;
+  }
+}
