add font style size and weight to h5 and id fill

--- a/screen.css
+++ b/screen.css
@@ -35,7 +35,6 @@ body {
 h1,
 h2,
 h3,
-h5,
 p {
   padding-bottom: 1.222em; /* 22 / 18 = 1.2222222222 */
 }
@@ -61,11 +60,20 @@ h4 {
   font-weight: bolder;
   font-style: oblique;
 }
+h5 {
+  font-family: cursive;
+  padding-top: 0.0625em;
+}
 #footer {
   font-size: 0.75em;
 }
 .social {
   padding-top: 1.222em;
+}
+#fill {
+  font-style: italic;
+  font-weight: lighter;
+  font-size: smaller;
 }
 ul {
   list-style-type: disc;
