--- a/screen.css
+++ b/screen.css
@@ -154,7 +154,7 @@ label[for="accept-terms"] {
   color: #000000;
   background-color: #00CCFF;
 }
-.js #video{
+.js #video {
   cursor: pointer;
 }
 /* State Styles */
@@ -196,7 +196,7 @@ label[for="accept-terms"] {
   #aquarium {
     flex: auto;
     width: 35%;
-    padding-left: 5%
+    padding-left: 5%;
   }
   #video {
     flex: auto;
@@ -227,10 +227,9 @@ label[for="accept-terms"] {
     padding-top: 10%;
   }
   #canada {
-  display: flex;
-  justify-content: space-around;
-  justify-content: space-between;
-  width: 200%;
+    display: flex;
+    justify-content: space-between;
+    width: 200%;
   }
   .second {
     width: 200%;
